--- a/azure/packages/azure-client/.npmignore
+++ b/azure/packages/azure-client/.npmignore
@@ -4,3 +4,6 @@ nyc
 src/test
 dist/test
 **/_api-extractor-temp/**
+
+# These are large test files that we don't need to distribute.
+**/*.test-files.tar
