--- a/experimental/dds/attributable-map/.npmignore
+++ b/experimental/dds/attributable-map/.npmignore
@@ -4,3 +4,6 @@ nyc
 src/test
 dist/test
 **/_api-extractor-temp/**
+
+# These are large test files that we don't need to distribute.
+**/*.test-files.tar
