--- a/packages/dds/matrix/.npmignore
+++ b/packages/dds/matrix/.npmignore
@@ -6,3 +6,6 @@ dist/test
 **/_api-extractor-temp/**
 
 bench/
+
+# These are large test files that we don't need to distribute.
+**/*.test-files.tar
