Fix "npm run linkcheck" - Some links are not existing now

--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -1,13 +1,13 @@
 {
 	"routes": [
 		{
-			"route": "/docs/apis/{*}",
-			"redirect": "/docs/api/v2/{*}",
+			"route": "/docs/api/v1/{*}",
+			"redirect": "/docs/api/v1/{*}",
 			"statusCode": 301
 		},
 		{
 			"route": "/docs/api/current/{*}",
-			"redirect": "/docs/api/v2/{*}",
+			"redirect": "/docs/api/v1/{*}",
 			"statusCode": 301
 		},
 		{
