Remove the findTile API (#18908)
Finalize the removal of the findTile API, in favor of the new
searchForMarker API.

AB#6199

--- a/packages/dds/merge-tree/package.json
+++ b/packages/dds/merge-tree/package.json
@@ -187,6 +187,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_Client": {
+				"backCompat": false
+			}
+		}
 	}
 }
