(build): Fix FF.com redirects by adding extension matching

--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -6,8 +6,8 @@
 			"statusCode": 301
 		},
 		{
-			"route": "/docs/apis/azure-client/{*}",
-			"redirect": "/docs/apis/azure-client/{*}",
+			"route": "/docs/apis/azure-client/{*.}",
+			"redirect": "/docs/apis/azure-client/{*.}",
 			"statusCode": 301
 		}
 	],
