test more redirects

--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -7,7 +7,17 @@
 		},
 		{
 			"route": "/docs/apis/azure-client/{*.}",
-			"redirect": "/docs/apis/azure-client/{*.}",
+			"redirect": "/docs/apis",
+			"statusCode": 301
+		},
+		{
+			"route": "/docs/fcdocstest/{*.}",
+			"redirect": "/docs/apis/{*.}",
+			"statusCode": 301
+		},
+		{
+			"route": "/docs/apis/azure-client",
+			"redirect": "/docs/apis",
 			"statusCode": 301
 		}
 	],
