build(docs): Test redirects by going back to previous syntax

--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -6,13 +6,13 @@
 			"statusCode": 301
 		},
 		{
-			"route": "/docs/apis/azure-client/{*.}",
+			"route": "/docs/apis/azure-client/*",
 			"redirect": "/docs/apis",
 			"statusCode": 301
 		},
 		{
-			"route": "/docs/fcdocstest/{*.}",
-			"redirect": "/docs/apis/{*.}",
+			"route": "/docs/fcdocstest/*",
+			"redirect": "/docs/apis/*",
 			"statusCode": 301
 		},
 		{
