--- a/experimental/framework/data-objects/tsconfig.json
+++ b/experimental/framework/data-objects/tsconfig.json
@@ -1,12 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
-		"module": "esnext",
 		"rootDir": "./src",
 		"outDir": "./dist",
-		"composite": true,
-		"types": ["node"],
 	},
-	"include": ["src/**/*"],
 }
