tree2: record package version in IChannel attributes

--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@fluidframework/tree",
 	"version": "2.0.0-rc.1.0.0",
-	"description": "Tree",
+	"description": "Distributed tree",
 	"homepage": "https://fluidframework.com",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/microsoft/FluidFramework.git",
-		"directory": "experimental/dds/tree2"
+		"directory": "packages/dds/tree"
 	},
 	"license": "MIT",
 	"author": "Microsoft and contributors",
@@ -22,7 +22,9 @@
 		"build:compile": "fluid-build . --task compile",
 		"build:docs": "api-extractor run --local",
 		"build:esnext": "tsc --project ./tsconfig.esnext.json",
+		"build:genver": "gen-version",
 		"build:test": "tsc --project ./src/test/tsconfig.json",
+		"check:are-the-types-wrong": "attw --pack . --entrypoints .",
 		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
 		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" _api-extractor-temp nyc",
@@ -86,6 +88,7 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
+		"@arethetypeswrong/cli": "^0.13.3",
 		"@fluid-private/stochastic-test-utils": "workspace:~",
 		"@fluid-private/test-dds-utils": "workspace:~",
 		"@fluid-private/test-drivers": "workspace:~",
