remove cjs file extensions in exports

--- a/common/lib/common-definitions/package.json
+++ b/common/lib/common-definitions/package.json
@@ -14,7 +14,7 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"default": "./dist/index.cjs"
+			"default": "./dist/index.js"
 		}
 	},
 	"main": "dist/index.cjs",
