--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -23,7 +23,7 @@
 			}
 		}
 	},
-	"main": "dist/indexNode.cjs",
+	"main": "dist/index.js",
 	"module": "lib/indexNode.mjs",
 	"browser": {
 		"./dist/indexNode.cjs": "./dist/indexBrowser.cjs",
