--- a/packages/dds/cell/package.json
+++ b/packages/dds/cell/package.json
@@ -19,7 +19,7 @@
 			},
 			"require": {
 				"types": "./dist/index.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		},
 		"./alpha": {
@@ -29,7 +29,7 @@
 			},
 			"require": {
 				"types": "./dist/cell-alpha.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		},
 		"./beta": {
@@ -39,7 +39,7 @@
 			},
 			"require": {
 				"types": "./dist/cell-beta.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		},
 		"./internal": {
@@ -49,7 +49,7 @@
 			},
 			"require": {
 				"types": "./dist/index.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		},
 		"./public": {
@@ -59,7 +59,7 @@
 			},
 			"require": {
 				"types": "./dist/cell-public.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		}
 	},
