--- a/packages/tools/devtools/devtools-browser-extension/tsconfig.json
+++ b/packages/tools/devtools/devtools-browser-extension/tsconfig.json
@@ -9,6 +9,7 @@
 		"target": "es2018",
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true,
+		"moduleResolution": "node",
 	},
 	"include": ["src/**/*"],
 }
