remove for packages without exports

--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -29,7 +29,7 @@
 			},
 			"require": {
 				"types": "./dist/indexNode.d.ts",
-				"default": "./dist/indexNode.cjs"
+				"default": "./dist/indexNode.js"
 			}
 		}
 	},
