--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -21,11 +21,11 @@
 		"./internal": {
 			"import": {
 				"types": "./lib/index.d.mts",
-				"default": "./lib/index.mjs"
+				"default": "./lib/index.js"
 			},
 			"require": {
-				"types": "./dist/index.d.ts",
-				"default": "./dist/index.cjs"
+				"types": "./lib/index.d.ts",
+				"default": "./lib/index.js"
 			}
 		}
 	},
