--- a/common/lib/common-definitions/package.json
+++ b/common/lib/common-definitions/package.json
@@ -23,7 +23,7 @@
 			},
 			"require": {
 				"types": "./dist/index.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		}
 	},
