--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -29,7 +29,7 @@
 			},
 			"require": {
 				"types": "./dist/index.d.ts",
-				"default": "./dist/index.cjs"
+				"default": "./dist/index.js"
 			}
 		}
 	},
