--- a/packages/runtime/container-runtime/package.json
+++ b/packages/runtime/container-runtime/package.json
@@ -237,7 +237,9 @@
 	},
 	"typeValidation": {
 		"broken": {
-			"ClassDeclaration_ContainerRuntime": {"forwardCompat": false}
+			"ClassDeclaration_ContainerRuntime": {
+				"forwardCompat": false
+			}
 		}
 	}
 }
